# ddc-tui

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  update-submodule.yml
src/: app.rs  db.rs  ddc.rs  main.rs  ui.rs
